[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["MKRyuto <randiprawira23@gmail.com>"]
description = ""
name = "aigner"
version = "0.1.0"
[tool.poetry.dependencies]
bs4 = "^0.0.1"
discord = "^1.0"
flask = "^1.1"
mechanicalsoup = "^1.3.0"
python = "^3.7"
[tool.poetry.dev-dependencies]
